--- a/docs/src/pages/interactive-help.astro
+++ b/docs/src/pages/interactive-help.astro
@@ -1,5 +1,5 @@
 ---
-import { joinURL } from "ufo";
+import { joinURL, withTrailingSlash } from "ufo";
 
 import Layout from "../layouts/Layout.astro";
 import Chat from "../components/Chat.svelte";
@@ -10,8 +10,14 @@ const { BASE_URL } = import.meta.env;
 <Layout
   lang="en"
   title="Interactive Help for OBS Background Removal"
-  description="Get instant help for Live Background Removal Lite securely. This experimental AI chatbot runs 100% locally in your browser—no data is sent to servers."
 >
+  <Fragment slot="head">
+    <meta
+      name="description"
+      content="Get instant help for Live Background Removal Lite securely. This experimental AI chatbot runs 100% locally in your browser—no data is sent to servers."
+    />
+  </Fragment>
+
   <main class="white-box">
     <Chat client:load />
 
@@ -31,7 +37,12 @@ const { BASE_URL } = import.meta.env;
         in the response.
       </p>
     </div>
-    <p><a href={joinURL(BASE_URL, "/")}>Back to the top page</a></p>
+
+    <nav aria-label="Page navigation" style="margin-top: 2rem;">
+      <p>
+        <a href={withTrailingSlash(joinURL(BASE_URL))}>Back to Top</a>
+      </p>
+    </nav>
   </main>
 </Layout>
 
