--- a/docs/src/pages/versions/[version].astro
+++ b/docs/src/pages/versions/[version].astro
@@ -290,7 +290,7 @@ const schemaData = {
       <nav id="footer-nav" aria-label="Page navigation">
         <ul>
           <li>
-            <a href={withTrailingSlash(joinURL(BASE_URL))}>Back to Top</a>
+            <a href={withTrailingSlash(BASE_URL)}>Back to Top</a>
           </li>
           <li>
             <a href={withTrailingSlash(joinURL(BASE_URL, "versions"))}
