--- a/docs/src/pages/versions/index.astro
+++ b/docs/src/pages/versions/index.astro
@@ -5,6 +5,7 @@ import { Octokit, type RestEndpointMethodTypes } from "@octokit/rest";
 import {
   GITHUB_OWNER,
   GITHUB_REPO,
+  GITHUB_URL,
   PRODUCTION_BASE_URL,
 } from "../../lib/info.js";
 import DefineLocalDate from "../../components/DefineLocalDate.astro";
@@ -106,10 +107,19 @@ const schemaData = {
       </a>
     </p>
 
-    <nav aria-label="Page navigation">
-      <p>
-        <a href={withTrailingSlash(BASE_URL)}>Back to Top</a>
-      </p>
+    <nav class="page-nav" aria-label="Page navigation">
+      <ul>
+        <li>
+          <a href={withTrailingSlash(BASE_URL)}>Back to Top</a>
+        </li>
+        <li>
+          <a
+            href={withTrailingSlash(GITHUB_URL)}
+            target="_blank"
+            rel="noopener noreferrer">GitHub Repository</a
+          >
+        </li>
+      </ul>
     </nav>
 
     <hr />
