--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -61,6 +61,12 @@ const { BASE_URL } = import.meta.env;
         </p>
       </footer>
     </div>
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "0df4a48356ba406099ae721158ab230b"}'
+    ></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
 
