--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -4,10 +4,9 @@ import { joinURL } from "ufo";
 interface Props {
   lang: string;
   title: string;
-  description?: string;
 }
 
-const { lang, title, description } = Astro.props;
+const { lang, title } = Astro.props;
 const { BASE_URL } = import.meta.env;
 ---
 
@@ -16,7 +15,6 @@ const { BASE_URL } = import.meta.env;
   <head>
     <meta charset="utf-8" />
     <title>{title}</title>
-    <meta name="description" content={description} />
     <link
       rel="alternate"
       type="text/markdown"
